--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <nav>
             <div class="topnav">
                 <div class="logopic">
-                <img src="../images/logopic.png"></div>
+                <img src="images/logopic.png"></div>
 
 
             
@@ -28,7 +28,7 @@
             <section>
                 <div class="heroImg">
                     <div class="aboutmepic">
-                        <img src="../images/aboutme.png"
+                        <img src="images/aboutme.png"
                         alt="pic of me">
                         <h3>Sabina Havalic</h3>
                      </div>
